allprojects {
    version = '1.0'
}

subprojects {
    apply plugin: 'java'
    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }
    repositories {
        mavenCentral()
    }
    test {
        useJUnitPlatform()
    }
    dependencies {
        // junit
        testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
        testImplementation("org.junit.jupiter:junit-jupiter-params:${junitVersion}")
        testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

        // lombok
        compileOnly "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
        testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
        testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

        // logging
        implementation "org.slf4j:slf4j-api:${slf4jVersion}"
        implementation "ch.qos.logback:logback-core:${logbackVersion}"
        runtimeOnly "ch.qos.logback:logback-classic:${logbackVersion}"

        // utils
        testImplementation "org.awaitility:awaitility:${awaitilityVersion}"
    }
}
